fix: #137 refactor search to use query string instead of path variable (no more weired jumping and routing); fix collapse to stay open until closed or clicked outside;

--- a/frontend/src/assets/styles/styles.scss
+++ b/frontend/src/assets/styles/styles.scss
@@ -335,3 +335,7 @@ main {
 		margin-right: 0;
 	}
 }
+
+.cursor-pointer {
+	cursor: pointer;
+}
